@@ -1,4 +1,14 @@
 <STRONG>Changes since 0.9.4</STRONG><BR><BR>
+The build 0.9.4.1221 includes the following changes:<BR>
+<UL>
+	<LI> Added a window border when there's no tab bar at the bottom of screen.</LI>
+	<LI> Fixed a selection location bug (#1608727).</LI>
+	<LI> Fixed a scrolling bug (#1619629).</LI>
+	<LI> Fixed a bug that disables dragging of text.</LI>
+	<LI> Updated the "term type" list. Removed xterm that doesn't work for some keys. Now rxvt is used as default.</LI>
+	<LI> Fixed a reverse bold color bug.</LI>
+	<LI> Fixed a few bug that causes crashes.</LI>
+</UL>
 The build 0.9.4.1217 includes the following changes:<BR>
 <UL>
 	<LI> Fixed the tabbar-disappearing bug (#1613110).</LI>
